--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
 include README.md
+recursive-include djrobots/templates *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
